--- a/app/templates/components/layout.html
+++ b/app/templates/components/layout.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Starcraft II</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -28,11 +28,38 @@
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
+                {% if current_user.is_authenticated %}
+
+                <li class="nav-item active">
+                    <a class="nav-link">{{ "{} {}".format(current_user.first_name, current_user.last_name)}}</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
+                </li>
+                {% else %}
                 <li class="nav-item active">
                     <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
+                </li>
+                {% endif %}
+            </ul>
         </div>
     </nav>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category,message in messages %}
+                <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+
     {% block content %}
 
     {% endblock content %}
